# fm-radio-sn

./: .gitignore  CMakeLists.txt  README.md  TODO  commands
CONTROL/: fm-radio-sn.desktop
pkg/: 50-prolific-pl2303-serial-port.rules
promote/: slidingtext.h  statustext.h
src/: main.cpp  myuseragent.cpp  myuseragent.h  resources.qrc
src/fmradio/: appmanager.cpp  appmanager.h  appwindow.cpp  appwindow.h  controlpanel.cpp  controlpanel.h  useragent.cpp  useragent.h
src/fmradio/core/: commands.cpp  commands.h  controller.cpp  controller.h  eventhandler.cpp  eventhandler.h  eventinput.h  events.cpp  events.h  frequencyrange.cpp  frequencyrange.h  ids.h  inputlogger.cpp  inputlogger.h
src/fmradio/core/io/: command.h  event.h  output.h  pdu.h  protocol.cpp  protocol.h
src/fmradio/core/io/memory/: allocator.h  objectpool.h
src/fmradio/ui/: appcontainer.cpp  appcontainer.h  uicontrol.h
src/fmradio/ui/playlist/: playlistmodel.cpp  playlistmodel.h  playlistmodeleditordelegate.cpp  playlistmodeleditordelegate.h  playlistproxymodel.cpp  playlistproxymodel.h  playlistproxymodeldelegate.cpp  playlistproxymodeldelegate.h  stareditor.cpp  stareditor.h
src/fmradio/ui/settings/: logmodel.cpp  logmodel.h  logmodeldelegate.cpp  logmodeldelegate.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
src/fmradio/ui/widgets/: radioknob.cpp  radioknob.h  slidingtext.cpp  slidingtext.h  statustext.cpp  statustext.h  tunerknob.cpp  tunerknob.h  volumeknob.cpp  volumeknob.h
src/rc/: playlist.json
src/ui/panels/: defaulthorizontalpanel.cpp  defaulthorizontalpanel.h  defaulthorizontalpanel.ui
